Changed the java version, mongodb version, and removed the memory limit.
Revert "Changed the java version, mongodb version, and removed the memory limit."

This reverts commit 4b1998bd1a2078dc16bcde7bd4c70072ca561517.

Revert "Revert "Changed the java version, mongodb version, and removed the memory limit.""

This reverts commit 4137bb620b534e9efbc1b61479c24f5ede984711.